parse proof (#27)
* parse proof
Close #12